fix(workspace): vertically align docs tables (#2606)

--- a/packages/theme-patternfly-org/templates/mdx.css
+++ b/packages/theme-patternfly-org/templates/mdx.css
@@ -78,6 +78,9 @@
 .ws-table tr > code {
   white-space: normal;
 }
+.ws-table tbody > tr > td {
+  vertical-align: top;
+}
 
 /*
  * Copied from pf-c-content.
